2026-01-20  Deri James  <deri@chuzzlewit.myzen.co.uk>

	Change location of the Inline::C build directory

	* src/devices/gropdf/gropdf.pl: Update copyright.
	Include module File::Path (part of perl since before
	version 5.8).
	Adjust location of Inline::C's cache directory according
	to XDG standards, rather than $HOME/_Inline.

	Thanks to Bruno Haible for the information in:-

	<https://lists.gnu.org/archive/html/groff/2026-01/\
	msg00140.html>

	Fixes <https://savannah.gnu.org/bugs/?67997>

2026-02-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	Stop using `${1+"$@"}` to kludge around old broken shells.

	The (forthcoming) Autoconf 2.73 manual explains.

	---snip---
	You may see usages like ‘${1+"$@"}’ in older shell scripts
	designed to work around a portability problem in ancient shells.
	Unfortunately this runs afoul of bugs in more-recent shells, and
	nowadays it is better to use plain ‘"$@"’ instead.

	The portability problem with ancient shells was significant.
	When there are no positional arguments ‘"$@"’ should be
	discarded, but the original Unix version 7 Bourne shell
	mistakenly treated it as equivalent to ‘""’ instead, and many
	ancient shells followed its lead.

	For many years shell scripts worked around this portability
	problem by using ‘${1+"$@"}’ instead of ‘"$@"’, and you may see
	this usage in older scripts.  Unfortunately, ‘${1+"$@"}’ does
	not work with ‘ksh93’ M 93t+ (2009) as shipped in AIX 7.2
	{2015}, as this shell drops a trailing empty argument:

	  $ set a b c ""
	  $ set ${1+"$@"}
	  $ echo $#
	  3

	Also, ‘${1+"$@"}’ does not work with Zsh 4.2.6 (2005) and
	earlier, as shipped in Mac OS X releases before 10.5, as this
	old Zsh incorrectly word splits the result:

	  zsh $ emulate sh
	  zsh $ for i in "$@"; do echo $i; done
	  Hello World
	  !
	  zsh $ for i in ${1+"$@"}; do echo $i; done
	  Hello
	  World
	  !
	---end snip---

	In light of all this winning by elite shell developers,